package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author John Carlos Arrieta Arrieta
 */
public enum RolFamiliaEnum {
    ABUELO,
    ABUELA,
    PADRE,
    MADRE,
    HIJO,
    HIJA,
    TIO,
    TIA,
    PRIMO,
    PRIMA
}
